fix link text overflow

--- a/url-shortening-api-master/index.css
+++ b/url-shortening-api-master/index.css
@@ -224,6 +224,7 @@ nav a {
   border-bottom: 1px solid #e5e5e5;
   overflow: hidden;
   text-overflow: ellipsis;
+  white-space: nowrap;
 }
 .short-url {
   align-self: flex-start;
